--- a/2-components-theming/index.qmd
+++ b/2-components-theming/index.qmd
@@ -12,4 +12,4 @@ title: "Components and themes"
 
 ## Exercises
 
--   Clone the GitHub repo `posit-dev/smalldatasf-quarto-exercises` (<http://pos.it/smalldatasf-quarto-exercises>) and work on `olympicdash-py-2.qmd.`
+-   In your cloned version of `posit-dev/smalldatasf-quarto-exercises` (<http://pos.it/smalldatasf-quarto-exercises>), work on `olympicdash-2.qmd.`
