--- a/3-deployment/index.qmd
+++ b/3-deployment/index.qmd
@@ -11,5 +11,5 @@ title: "Deploy your dashboard"
 ```
 ## Exercises
 
--   Clone the GitHub repo `posit-dev/smalldatasf-quarto-exercises` (<http://pos.it/smalldatasf-quarto-exercises>) and work on `olympicdash-py-4.qmd.`
+-   In your cloned version of `posit-dev/smalldatasf-quarto-exercises` (<http://pos.it/smalldatasf-quarto-exercises>), work on `olympicdash-4.qmd.`
 
