--- a/1-hello-dashboards/1-hello-dashboards.qmd
+++ b/1-hello-dashboards/1-hello-dashboards.qmd
@@ -423,12 +423,205 @@ from plotnine.data import mpg
 :::
 :::
 
-## Steps 1 - 4 {auto-animate="true"}
+## Step 5: Add a logo {auto-animate="true"}
 
-![](images/first-dashboard-py-3.png){fig-align="center"}
+::: python-box
+```` {.yaml filename="dashboard.qmd" code-line-numbers="|3-5"}
+---
+title: "My first Quarto dashboard"
+format: 
+  dashboard:
+    logo: images/beetle.png
+---
+
+```{{python}}
+from plotnine import ggplot, aes, geom_point, geom_bar
+from plotnine.data import mpg
+```
+
+```{{python}}
+#| title: Highway vs. city mileage
+(
+    ggplot(mpg, aes(x = "cty", y = "hwy"))
+    + geom_point()
+)
+```
+
+```{{python}}
+#| title: Drive types
+(
+    ggplot(mpg, aes(x = "drv"))
+    + geom_bar()
+)
+```
+````
+:::
+
+## Step 5: Add a logo {.smaller auto-animate="true"}
+
+::: {.notes}
+add a logo
+yaml header
+:::
+
+::: columns
+::: {.column width="40%"}
+::: python-box
+```` {.yaml filename="dashboard.qmd"}
+---
+title: "My first Quarto dashboard"
+format: 
+  dashboard:
+    logo: images/beetle.png
+---
+
+```{{python}}
+from plotnine import ggplot, aes, geom_point, geom_bar
+from plotnine.data import mpg
+```
+
+```{{python}}
+#| title: Highway vs. city mileage
+(
+    ggplot(mpg, aes(x = "cty", y = "hwy"))
+    + geom_point()
+)
+```
+
+```{{python}}
+#| title: Drive types
+(
+    ggplot(mpg, aes(x = "drv"))
+    + geom_bar()
+)
+```
+````
+:::
+:::
+
+::: {.column width="60%"}
+![](images/first-dashboard-py-4.png)
+:::
+:::
+
+## Steps 1 - 5 {auto-animate="true"}
+
+![](images/first-dashboard-py-4.png){fig-align="center"}
 
 ::: {.notes}
 now have a dashboard
+:::
+
+# Layout
+
+## Rows {auto-animate="true"}
+
+By default, cards are laid out in rows:
+
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="|13,23"}
+{{< include _rows.qmd >}}
+````
+:::
+
+## Rows {.smaller auto-animate="true"}
+
+::: columns
+::: {.column width="40%"}
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="13,23"}
+{{< include _rows.qmd >}}
+````
+:::
+:::
+
+::: {.column width="60%"}
+![](images/rows.png)
+:::
+:::
+
+## Rows {auto-animate="true"}
+
+Default value of `orientation` is `rows`:
+
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="4-5"}
+{{< include _rows-orientation.qmd >}}
+````
+:::
+
+## Columns {auto-animate="true"}
+
+Setting `orientation` to `columns` makes each `##` indicate a column instead of a row:
+
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="4-5"}
+{{< include _columns.qmd >}}
+````
+:::
+
+## Columns {.smaller auto-animate="true"}
+
+::: columns
+::: {.column width="40%"}
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="4-5,14,24"}
+{{< include _columns.qmd >}}
+````
+:::
+:::
+
+::: {.column width="60%"}
+![](images/columns.png)
+:::
+:::
+
+## Rows, then columns {auto-animate="true"}
+
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="|13-23|25-45"}
+{{< include _rows-then-columns.qmd >}}
+````
+:::
+
+## Rows, then columns {.smaller auto-animate="true"}
+
+::: columns
+::: {.column width="40%"}
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="13,15,19,25,27,37"}
+{{< include _rows-then-columns.qmd >}}
+````
+:::
+:::
+
+::: {.column width="60%"}
+![](images/rows-then-columns.png)
+:::
+:::
+
+## Columns, then rows {auto-animate="true"}
+
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="|5|13-23|26-46"}
+{{< include _columns-then-rows.qmd >}}
+````
+:::
+
+## Columns, then rows {.smaller auto-animate="true"}
+
+::: columns
+::: {.column width="40%"}
+::: {data-id="code"}
+```` {.yaml filename="dashboard.qmd" code-line-numbers="5"}
+{{< include _columns-then-rows.qmd >}}
+````
+:::
+:::
+
+::: {.column width="60%"}
+![](images/columns-then-rows.png)
+:::
 :::
 
 # Your turn
@@ -444,7 +637,7 @@ In your cloned version of `posit-dev/smalldatasf-quarto-exercises` (<http://pos.
 Your goal is to create the following dashboard.
 
 ::: python-box
-![](images/olympicdash-py-1.png)
+![](images/olympicdash-1.png)
 :::
 
 
@@ -453,37 +646,19 @@ Your goal is to create the following dashboard.
 ::: your-turn
 -   Turn the output to a dashboard.
 -   Add `title`s to code cells.
+-   Add the olympics logo from the `images` folder
 :::
 
 :::{.column width="80%"}
 ::: python-box
-![](images/olympicdash-py-1.png)
+![](images/olympicdash-1.png)
 :::
 :::
 
 {{< countdown minutes=5 >}}
-
 
 
 ## Step 2
-
-::: your-turn 
-Using [https://quarto.org/docs/dashboards/](https://quarto.org/docs/dashboards/):
-
--   Add a GitHub icon and link to a GitHub repository.
--   Add the olympics logo from the `images` folder.
-:::
-
-:::{.column width="80%"}
-::: python-box
-![](images/olympicdash-py-2.png)
-:::
-:::
-
-{{< countdown minutes=5 >}}
-
-
-## Step 3
 
 ::: your-turn
 Using [https://quarto.org/docs/dashboards/](https://quarto.org/docs/dashboards/):
@@ -493,7 +668,7 @@ Reorganize the cards into rows and columns as shown below.
 
 :::{.column width="80%"}
 ::: python-box
-![](images/olympicdash-py-3.png)
+![](images/olympicdash-3.png)
 :::
 :::
 
