Edit setup instructions

--- a/0-intro-to-quarto/0-intro-to-quarto.qmd
+++ b/0-intro-to-quarto/0-intro-to-quarto.qmd
@@ -396,7 +396,7 @@ quarto render
 
 ::: task
 
-**3. Exercises:** Go to [`pos.it/smalldatasf-quarto-exercises`](https://pos.it/smalldatasf-quarto-exercises), click on *Use this template* then *Create a new repository*.
+**3. Exercises:** Go to [`pos.it/smalldatasf-quarto-exercises`](https://pos.it/smalldatasf-quarto-exercises), click on *Use this template* then *Create a new repository*. Check *Include all branches*. Choose your personal GitHub repo as the Owner and give the repository a name.
 
 **4. Packages:**  Open *VS Code*. Under *Start*, click on *Clone Git Repository*, and paste the URL of your exercise repo. 
 
