--- a/0-intro-to-quarto/0-intro-to-quarto.qmd
+++ b/0-intro-to-quarto/0-intro-to-quarto.qmd
@@ -322,7 +322,7 @@ quarto convert my-document.qmd   # converts to ipynb
 
 ::: incremental
 
--   Integrated render and preview for Quarto documents.
+-   Integrated render and preview for Quarto documents
 -   Syntax highlighting for markdown and embedded languages
 -   Completion and diagnostics for YAML options
 -   Completion for embedded languages (e.g. Python, R, Julia, etc.)
